--- a/docs/style/view/bmcs/view/synthesis/synthesis-preparation.less
+++ b/docs/style/view/bmcs/view/synthesis/synthesis-preparation.less
@@ -18,7 +18,7 @@
         padding   : 40px 196px;
 
         @media @phone {
-            padding: 40px 0px;
+            padding: 40px 8px;
         }
 
         >h2 {
@@ -38,8 +38,9 @@
 
         >.mate-container {
             display   : flex;
+            overflow-x: auto;
             gap       : 20px;
-            min-height: 140px;
+            min-height: 160px;
         }
 
         >.card-container {
